new-version-tls-deploy-service-ingress/nginx-class.yaml
# Argumento do deploy ingress nginx
# - args:
#   - --controller-class=k8s.io/ingress-nginx

# helm install ingress-nginx-2 ingress-nginx/ingress-nginx  \
# --namespace ingress-nginx-2 \
# --set controller.ingressClassResource.name=nginx-two \
# --set controller.ingressClassResource.controllerValue="example.com/ingress-nginx-2" \
# --set controller.ingressClassResource.enabled=true \
# --set controller.ingressClassByName=true

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
